# prompt-architect

./: .gitignore  AGENTS.md  DOCS_AUDIT.md  PLAN.md  README.md  REFINEMENT_BACKLOG.md  REFINEMENT_STANDARDS.md  pyproject.toml
projects/prompt-architect/: .gitignore
prompt_architect.egg-info/: SOURCES.txt  requires.txt
prompt_architect/core/: evaluator.py  storage.py  template.py
scripts/: demo_regression.py
src/prompt_architect/: models.py  registry.py
src/prompt_architect/core/: cli.py  evaluator.py  git_manager.py  storage.py  template.py
src/prompt_architect/embeddings/: base.py  mock.py  openai.py
src/prompt_architect/intelligence/: analyzer.py  similarity.py
src/prompt_architect/orchestration/: agent.py  chain.py  optimizer.py
src/prompt_architect/providers/: anthropic.py  base.py  config.py  factory.py  gemini.py  llamacpp.py  mock.py  ollama.py  openai.py
templates/: test_template.json
tests/: test_analyzer.py  test_demo_regression.py  test_embeddings_mock.py  test_embeddings_openai.py  test_evaluator.py  test_git_manager.py  test_integration.py  test_integration_evaluator.py  test_models.py  test_orchestration_agent.py  test_orchestration_chain.py  test_orchestration_optimizer.py  test_provider_anthropic.py  test_provider_config.py  test_provider_factory.py  test_provider_gemini.py  test_provider_llamacpp.py  test_provider_ollama.py  test_provider_openai.py  test_registry_and_provider.py  test_regression.py  test_similarity.py  test_storage.py  test_template.py
