[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-architect"
version = "0.1.0"
description = "A CLI tool to version-control and test LLM prompts."
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "GitPython>=3.1.0",
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["prompt_architect"]
